Downgraded api-version to 1.13 and java-version to 8